testData/org/elixir_lang/inspection/unresolvable_module_qualifier/unresolved_qualifier.ex
defmodule UnresolvedTest do
  <error descr="Module 'Unresolved' is not defined or aliased in this scope">Unresolved</error>.changeset(%{})
end
